alignment fix

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,5 +1,5 @@
 .mjg-contact  {
-  padding: 50px 0 0 0;
+  padding: 20px 0 0 0;
   h1 {
     margin-bottom: 50px;
   }
